get and analyze data

--- a/scripts/live_test/monitor.yml
+++ b/scripts/live_test/monitor.yml
@@ -16,4 +16,5 @@ jobs:
         architecture: 'x64'
     - bash: |
         pip install mysql-connector-python
+        pip install request
         python /home/vsts/work/1/s/scripts/live_test/monitor.py
