Adding new recordings and fixing tests

--- a/src/azure-cli/azure/cli/command_modules/botservice/webappv4.template.json
+++ b/src/azure-cli/azure/cli/command_modules/botservice/webappv4.template.json
@@ -66,7 +66,8 @@
             "defaultValue": ""
         },
         "isCmekEnabled":{
-            "type": "bool"
+            "type": "bool",
+            "defaultValue": false
         },
         "cmekKeyVaultUrl":{
             "type": "string",
