--- a/src/azure-cli/azure/cli/command_modules/botservice/tests/latest/recordings/test_prepare_publish_should_raise_cli_error_when_version_is_v4.yaml
+++ b/src/azure-cli/azure/cli/command_modules/botservice/tests/latest/recordings/test_prepare_publish_should_raise_cli_error_when_version_is_v4.yaml
@@ -15,12 +15,12 @@ interactions:
       ParameterSetName:
       - -g -n
       User-Agent:
-      - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.9 msrest_azure/0.6.3 azure-mgmt-botservice/0.2.0
-        Azure-SDK-For-Python AZURECLI/2.9.1
+      - python/3.8.2 (macOS-10.14.3-x86_64-i386-64bit) msrest/0.6.18 msrest_azure/0.6.3
+        azure-mgmt-botservice/0.3.0 Azure-SDK-For-Python AZURECLI/2.18.0
       accept-language:
       - en-US
     method: DELETE
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002?api-version=2018-07-12
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002?api-version=2020-06-02
   response:
     body:
       string: ''
@@ -28,7 +28,7 @@ interactions:
       cache-control:
       - no-cache
       date:
-      - Fri, 24 Jul 2020 09:47:09 GMT
+      - Wed, 27 Jan 2021 22:17:03 GMT
       expires:
       - '-1'
       pragma:
